# Trading-Agent

./: .env.example  .gitignore  Readme.md  STYLE.md  convert_to_docx.py  dashboard.py  interim_report.docx  interim_report.md  pyproject.toml  ref.docx  requirements.txt  run_analysis.py  summarizer_agent.py
.github/workflows/: deploy-backend.yml  deploy-frontend.yml
backend/: __init__.py  main.py  paper_execution.py  run_analysis.py  run_daily_paper_trade.py  run_sp500_screened_job.py  run_top20_longshort_job.py  streaming_context.py  top20_history.py
backend/fundamentals_agent/: .gitignore  README.md  agent.py  config.py
backend/llm_provider/: __init__.py  mistral_throttle.py  observed_chat.py  resolver.py
backend/paper_simulator/: __init__.py  simulator.py
backend/portfolio_history/: __init__.py  backfill.py  store.py
backend/portfolio_longshort/: __init__.py  allocator.py
backend/portfolio_validator/: __init__.py  validator.py
backend/risk_portfolio_agent/: __init__.py  agent.py
backend/scripts/: generate_april_paper_simulation.py
backend/sentiment_agent/: .env.example  main.py
backend/summarizer_agent/: __init__.py  agent.py
backend/technical_agent/: agent.py  config.py  graph.py  llm.py  models.py
backend/tests/: test_universe_screen.py
backend/trader_agent/: __init__.py  adapter.py  agent.py  models.py  node.py  tools.py
backend/universe/: __init__.py  screen.py  sp500.py  top20.py
dashboard/: app.py
docs/: PIPELINE.md  PROJECT_README.md
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  api.js  index.css
fundamentals_agent/: __init__.py  main.py  report_builder.py  report_schema.py  requirements.txt  state.py  tools.py
fundamentals_agent/docs/: ARCHITECTURE.md  LOCAL_SETUP.md  OLLAMA_SETUP.md  README.md  SETUP.md
fundamentals_agent/scripts/: README.md  check_ollama.py  compare_reports.py  compare_reports_top10.py  example.py  run_batch.py  run_batch_top10.py  test_agent.py  test_local.py
sentiment_agent/config/: settings.py
summarizer_agent/: agent.py
technical_agent/: README.md  __init__.py  agent.py  cli.py  config.py  graph.py  integration.py  llm.py  models.py  prompts.py  server.py  tracing.py
trader_agent/: adapter.py  agent.py  main.py  mock_inputs.py  node.py  tools.py
(+55 files in other folders)
